# DASHH_Hackathon

./: main.py
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  components.cpp  components.hpp  controlStrategy.cpp  controlStrategy.hpp  csvReader.cpp  csvReader.hpp  dataSource.cpp  dataSource.hpp  event.cpp  event.hpp  main.cpp  markovDrawer.cpp  markovDrawer.hpp  markovMain.cpp  performanceModel.cpp  performanceModel.hpp  plotter.py  simulator.hpp  temp.csv  utils.hpp
cpp/data/: short.csv
cpp/data/FLHH/Lotse1/: Info.xlsx
cpp/data/FLHH/Lotse1/event_date_utc=2020-12-31/: received_2021-01-01.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-01/: received_2021-01-01.parquet  received_2021-01-02.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-02/: received_2021-01-02.parquet  received_2021-01-03.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-03/: received_2021-01-03.parquet  received_2021-01-04.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-04/: received_2021-01-04.parquet  received_2021-01-05.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-05/: received_2021-01-05.parquet  received_2021-01-06.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-06/: received_2021-01-06.parquet  received_2021-01-07.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-07/: received_2021-01-07.parquet  received_2021-01-08.parquet
cpp/data/FLHH/Lotse1/event_date_utc=2021-01-08/: received_2021-01-08.parquet  (+1 more)
cpp/data/FLHH/Lotse2/: Info.xlsx
cpp/data/csv/: Lotse1_Batteries.csv  Lotse1_ChargePoints.csv  Lotse1_EnergyConverters.csv
python/: main.py  (+5 more)
(+180 files in other folders)
